<resources>
    <!-- Activity's Name -->
    <string name="app_name">TFG Studio</string>
    <string name="option_rtc">RTC Option</string>
    <string name="option_led">LED Option</string>
    <string name="option_encrypt_decrypt">Encrypt Decrypt Option</string>
    <string name="option_random">Generate RANDOM Option</string>
    <string name="option_signatures">Signatures Option</string>
    <string name="option_signatures_generate">Signatures Generate Option</string>
    <string name="option_signatures_corrupt">Signatures Corrupt Option</string>
    <string name="option_signatures_check">Signatures Check Option</string>
    <string name="option_ecdsa">ECDSA Option</string>
    <string name="option_i2c">I2C Option</string>
    <string name="option_tap">TAP Option</string>
    <string name="option_tap_test">TAP Test Option</string>

    <!-- Text view's name -->
    <string name="text_brief_explanation">Welcome to this app. Here there is a\nbrief explanation about its functionality.</string>
    <string name="text_list_bluetooth_devices_list">Bluetooth Devices List</string>
    <string name="text_list_paired_devices_list">Paired Devices List</string>
    <string name="text_list_new_devices_list">New Devices List</string>

    <string name="text_accurate_information">Accurate Information</string>
    <string name="text_refresh_sf">Refresh System Files</string>
    <string name="text_cpu">CPU</string>
    <string name="text_mem">MEMORY</string>

    <string name="text_usage_of_cpu">Average Of CPU Used %</string>
    <string name="text_usage_of_memory">Average Of Memory Used %</string>
    <string name="text_max_cpu">Maximum CPU Used %</string>
    <string name="text_max_mem">Maximum Memory Used %</string>
    <string name="text_time">Time Needed</string>
    <string name="text_trustly_cpu_values">Amount Of CPU Operations Considered</string>
    <string name="text_trustly_mem_values">Amount Of Memory Operations Considered</string>
    <string name="text_bytes">(Bytes)</string>
    <string name="text_kb">(KiloBytes)</string>
    <string name="text_mb">(MegaBytes)</string>

    <string name="text_ms_on">Milliseconds will be ON</string>
    <string name="text_ms_off">Milliseconds will be OFF</string>

    <string name="text_encrypt">ENCRYPT</string>
    <string name="text_decrypt">DECRYPT</string>
    <string name="text_hsm_question">Do you want to use HSM?</string>
    <string name="text_waiting_for_value">Waiting for Value</string>
    <string name="text_password">OPTIONAL Password</string>
    <string name="text_encrypting">Encrypting</string>
    <string name="text_decrypting">Decrypting</string>
    <string name="text_led_on">LED ON</string>
    <string name="text_led_off">LED OFF</string>
    <string name="text_led_trigger">LED Trigger</string>
    <string name="text_num_flashes">Number of Flashes</string>
    <string name="text_choose_size_random_file">Set Size of Random File</string>
    <string name="text_choose_name_random_file">Set Name of Random File</string>
    <string name="text_warning_choose_size_random_file_text">CAUTION: As bigger it would be, it is going to be slower</string>
    <string name="text_header_select_i2c_address">Select the new I2C address below</string>
    <string name="text_current_i2c_address">This is the current I2C address</string>
    <string name="text_selected_i2c_address">This is your I2C address election</string>
    <string name="text_header_select_hsm_function">Select a HSM\'s function</string>
    <string name="text_device_current_time">Current\'s device time</string>
    <string name="text_precise_hsm_rtc">Precise HSM\'s Real Time Clock</string>
    <string name="text_not_recise_hsm_rtc">Not precise HSM\'s Real Time Clock</string>
    <string name="text_header_rtc">Current clocks and Real Time Clocks</string>
    <string name="text_header_tap">Global TAP Sensibility Configuration</string>
    <string name="text_current_tap_sensibility">This is the current TAP sensibility (%)</string>
    <string name="text_current_tap_axis_value">This is the current AXIS TAP sensibility (%)</string>
    <string name="text_new_tap_sensibility">This is your TAP sensibility election (%)</string>
    <string name="text_axis_tap_sensibility">Axis TAP Sensibility Configuration</string>
    <string name="text_current_tap_axis_x">Current Axis X (%) value</string>
    <string name="text_current_tap_axis_y">Current Axis Y (%) value</string>
    <string name="text_current_tap_axis_z">Current Axis Z (%) value</string>
    <string name="text_tap_axis_x">Set new Sensibility Axis X (%)</string>
    <string name="text_tap_axis_y">Set new Sensibility Axis Y (%)</string>
    <string name="text_tap_axis_z">Set new Sensibility Axis Z (%)</string>
    <string name="text_info_tap">If you press the button without having entered any value to Axis, it would be reset to 50.</string>
    <string name="text_header_tap_test">Start TEST Display</string>
    <string name="text_tap_test_set_time_ms">Set wanted time to wait for TAP event in milliseconds</string>
    <string name="text_info_tap_test">Is the time is not set, or set to 0, it would be running until the end of Activity.</string>
    <string name="text_tap_test_axis_values">Movement detected has had the following characteristics.</string>
    <string name="text_tap_test_g_force">G Force Value</string>
    <string name="text_tap_test_tap_direction_meaning">That TAP direction means</string>
    <string name="text_tap_test_tap_direction">TAP Direction</string>
    <string name="text_tap_test_axis_x_values">Axis X values</string>
    <string name="text_tap_test_axis_y_values">Axis Y values</string>
    <string name="text_tap_test_axis_z_values">Axis Z values</string>
    <string name="text_signatures_generate_signature">Generate new Signature</string>
    <string name="text_signatures_corrupt_signature">Corrupt an existent Signature</string>
    <string name="text_signatures_check_signature">Check the validity of a Signature</string>
    <string name="text_header_signatures_create_message">Create your message and sign it</string>
    <string name="text_signatures_set_title">Message\'s Title</string>
    <string name="text_signatures_message">Write your message below</string>
    <string name="text_header_signatures_check">Check your Signatures</string>
    <string name="text_signatures_number_of_signatures">Number of Signatures done</string>
    <string name="text_signatures_spinner_select_signature">Select a Signature</string>
    <string name="text_signature_status">Status of the Signature</string>
    <string name="text_signature_message_content">The content of the message was the following</string>
    <string name="text_header_signatures_corrupt">Corrupt your Signatures</string>
    <string name="text_signature_message_content_corrupted">Write a new content to corrupt the current Signature</string>

    <!-- Hint's Name -->
    <string name="hint_password">Password</string>
    <string name="hint_example_ms_value">Ex: 500 ms</string>
    <string name="hint_example_flashes_value">Ex: 10</string>
    <string name="hint_choose_size_random_file_text_bytes">Ex: 1048576</string>
    <string name="hint_choose_size_random_file_text_kb">Ex: 1024</string>
    <string name="hint_choose_size_random_file_text_mb">Ex: 1</string>
    <string name="hint_choose_name_random_file">Ex: My First Random File, Yay!</string>
    <string name="hint_i2c_address">Ex: 0x30</string>
    <string name="hint_tap_sensibility">0 to 100</string>
    <string name="hint_rtc">Day Month NDay Hour GMT</string>
    <string name="hint_g_force">-1 to 1</string>
    <string name="hint_tap_direction">Direction</string>
    <string name="hint_signatures_set_title">Message to Bob</string>
    <string name="hint_signatures_message">Ex: Hello Bob, I\'m Alice! &#8230;</string>
    <string name="hint_signatures_done">Ex: 1</string>
    <string name="hint_signatures_status">Ex: Correct!</string>


    <!-- Button's Name -->
    <string name="button_begin">Let\'s start!</string>
    <string name="button_check_connectivity">Check Connectivity</string>
    <string name="button_back">Back</string>
    <string name="button_scan">Scan</string>
    <string name="button_details">DETAILS</string>
    <string name="button_send">SEND</string>
    <string name="button_disconnect">DISCONNECT</string>
    <string name="button_refresh">REFRESH</string>
    <string name="button_led_on">LED ON</string>
    <string name="button_led_off">LED OFF</string>
    <string name="button_led_trigger">TRIGGER</string>
    <string name="button_ms_on">Milliseconds will be ON</string>
    <string name="button_ms_off">Milliseconds will be OFF</string>
    <string name="button_insert_value">Insert Value</string>
    <string name="button_generate_random">Generate\nRandom</string>
    <string name="button_set_i2c_address">Set I2C</string>
    <string name="button_refresh_rtc">Refresh RTC</string>
    <string name="button_set_new_tap_sensibility">Global sensibility</string>
    <string name="button_start_tap_test">Tap Test</string>
    <string name="button_set_new_axis_tap_sensibility">Axis sensibility</string>
    <string name="button_sign_message">Sign message</string>
    <string name="button_generate_signature">Generate</string>
    <string name="button_corrupt_signature">Corrupt</string>
    <string name="button_check_signature">Check</string>

    <!-- Spinner's Name -->
    <string name="text_spinner_select_method">Select\ Method</string>
    <string name="text_spinner_select_type_file">Select\ Type\ of\ File</string>
    <string name="text_spinner_select_file">Select\ File</string>


    <string-array name="block_ciphers">
        <item>Select Cipher</item>
        <item>AES</item>
        <item>3DES</item>
        <item>Camellia</item>
    </string-array>

    <string-array name="list_i2c_0x30">
        <item>0x30</item>
        <item>0x31</item>
        <item>0x32</item>
        <item>0x33</item>
        <item>0x34</item>
        <item>0x35</item>
        <item>0x36</item>
        <item>0x37</item>
    </string-array>

    <string-array name="list_i2c_0x60">
        <item>0x60</item>
        <item>0x61</item>
        <item>0x62</item>
        <item>0x63</item>
        <item>0x64</item>
        <item>0x65</item>
        <item>0x66</item>
        <item>0x67</item>
    </string-array>
</resources>
