<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleDark"
    android:label="@string/option_random">

    <TextView
        android:id="@+id/choose_size_random_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:height="30dp"
        android:text="@string/text_choose_size_random_file"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/warning_choose_size_random_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_size_random_file"
        android:layout_centerHorizontal="true"
        android:text="@string/text_warning_choose_size_random_file_text"/>

    <EditText
        android:id="@+id/bytesConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warning_choose_size_random_file"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_choose_size_random_file_text_bytes"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/bytes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/bytesConverter"
        android:textSize="15sp"
        android:text="@string/text_bytes"
        android:layout_toEndOf="@id/value_size_random_file"
        android:layout_toRightOf="@id/value_size_random_file"
        android:layout_marginLeft="15sp"
        android:layout_marginStart="15sp" />

    <EditText
        android:id="@+id/value_size_random_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bytes"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/bytesConverter"
        android:layout_alignLeft="@id/bytesConverter"
        android:layout_alignEnd="@id/bytesConverter"
        android:layout_alignRight="@id/bytesConverter"
        android:hint="@string/hint_choose_size_random_file_text_kb"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/kb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/value_size_random_file"
        android:textSize="15sp"
        android:text="@string/text_kb"
        android:layout_toEndOf="@id/value_size_random_file"
        android:layout_toRightOf="@id/value_size_random_file"
        android:layout_marginLeft="15sp"
        android:layout_marginStart="15sp" />

    <EditText
        android:id="@+id/mbConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_size_random_file"
        android:layout_alignStart="@id/bytesConverter"
        android:layout_alignLeft="@id/bytesConverter"
        android:layout_alignEnd="@id/bytesConverter"
        android:layout_alignRight="@id/bytesConverter"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_choose_size_random_file_text_mb"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/mb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/mbConverter"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/text_mb"
        android:layout_alignStart="@id/kb"
        android:layout_alignLeft="@id/kb"/>

    <TextView
        android:id="@+id/choose_name_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:height="30dp"
        android:text="@string/text_choose_name_random_file"/>

    <EditText
        android:id="@+id/value_name_random_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_name_file"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_choose_name_random_file"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonGenerateRandomFile"
        android:background="@drawable/custom_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value_name_random_file"
        android:text="@string/button_generate_random"
        android:layout_alignStart="@id/kb"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/kb" />

</RelativeLayout>