<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleDark"
    android:label="@string/option_rtc">

    <TextView
        android:id="@+id/text_header_rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:height="30dp"
        android:text="@string/text_header_rtc"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text_device_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/text_device_current_time"
        android:layout_below="@id/text_header_rtc"/>

    <EditText
        android:id="@+id/value_device_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_device_time"
        android:focusable="false"/>

    <TextView
        android:id="@+id/text_hsm_precise_rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/value_device_time"
        android:text="@string/text_precise_hsm_rtc"/>

    <EditText
        android:id="@+id/value_hsm_precise_rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:layout_below="@+id/text_hsm_precise_rtc"/>

    <TextView
        android:id="@+id/text_hsm_not_precise_rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/value_hsm_precise_rtc"
        android:text="@string/text_not_recise_hsm_rtc"/>

    <EditText
        android:id="@+id/value_hsm_not_precise_rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_hsm_not_precise_rtc"
        android:focusable="false"/>

    <Button
        android:id="@+id/button_refresh_rtc"
        android:background="@drawable/custom_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_refresh_rtc"
        android:layout_alignEnd="@+id/text_header_rtc"
        android:layout_alignRight="@+id/text_header_rtc"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>